--- a/creative_production_studio/src/Styles/Navbar.css
+++ b/creative_production_studio/src/Styles/Navbar.css
@@ -20,7 +20,7 @@
   }
   
 .navbar ul li {
-    margin: 0;
+    margin-top: 25px;
     padding: 0;
   }
   
@@ -28,3 +28,25 @@
     color: white;
     text-decoration: none;
   }
+
+/*SEARCHBAR*/ 
+.navbar .search-bar{
+display: flex;
+ align-items: center;
+ background-color: rgba(255, 255, 255, 0);
+ padding: 5px 20px;
+ margin-top: 10px;
+ box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+}
+
+.search-bar input{
+ background: transparent;
+ margin-right: 10px;
+ color: white;
+}
+
+.search-bar input::placeholder {
+  color: #b4b4b4;
+ }
+ 
