created the toggles + faq questions boxes

--- a/creative_production_studio/src/Styles/FaqPage.css
+++ b/creative_production_studio/src/Styles/FaqPage.css
@@ -2,15 +2,15 @@ h5{
     text-align: center;
 }
 
+h6 {
+    margin-top: 15px;
+    text-align: center;
+    font-weight: normal;
+    font-size: 15px;
+}
+
 /*SEARCHBAR*/ 
-/* .search-bar{
-    display: flex;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0);
-    padding: 5px 300px 0px 300px;
-    margin-top: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-} */
+
 .search-bar {
     display: flex;
     align-items: center;
@@ -43,4 +43,77 @@ h5{
 .search-bar input::placeholder {
     color: #b4b4b4;
 }    
-     
+
+/*FAQs*/
+.faq-container{
+    max-width: 600px;
+    margin: 0 auto;
+
+}
+
+/*Questions*/
+.faq{
+    background-color: transparent;
+    border: 1px solid #9fa4a8;
+    border-radius: 10px;
+    margin: 20px 0;
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s ease;
+}
+.faq.active{
+    background-color: #fff;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1) ;
+
+}
+.faq.active::before, .faq.active::after{
+    content: '\f075';
+    font-family:'Font Awesome 6 Free' ;
+    color: #2ecc71;
+    font-size: 7rem;
+    position: absolute;
+    opacity: 0.2;
+    top: 20px;
+    left: 20px;
+    z-index: 0;
+}
+.faq.active::before{
+    color: #3498db;
+    top: -10px;
+    left: -30px;
+    transform: rotateY(-180deg);
+}
+
+.faq-title{
+    margin: 0 35px 0 0;
+}
+
+p {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.faq.active .faq-text{
+    display: block;
+}
+.faq-toggle{
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    padding: 0;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    
+}
+
+.faq-toggle .icon {
+    color: #fff; /* Change the color to whatever you want */
+}
