--- a/creative_production_studio/src/Styles/HomePage.css
+++ b/creative_production_studio/src/Styles/HomePage.css
@@ -14,6 +14,12 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    padding-top: 0%;
+
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
 
