--- a/creative_production_studio/src/Styles/FaqPage.css
+++ b/creative_production_studio/src/Styles/FaqPage.css
@@ -1,11 +1,14 @@
+
 h5{
     text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 h6 {
     margin-top: 15px;
-    text-align: center;
-    font-weight: normal;
+    text-align: center !important;
+    font-weight: normal !important;
     font-size: 15px;
 }
 
@@ -102,6 +105,7 @@ a:active {
 
 .faq-title{
     margin: 0 35px 0 0;
+    font-size: 17px;
 }
 
 p {
