--- a/creative_production_studio/src/Styles/Navbar.css
+++ b/creative_production_studio/src/Styles/Navbar.css
@@ -29,6 +29,10 @@
     text-decoration: none;
   }
 
+  .navbar ul li a:hover {
+    color: aqua;
+  }  
+
 /*SEARCHBAR*/ 
 .navbar .search-bar{
 display: flex;
